--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -5,4 +5,4 @@ WORKDIR /root
 COPY . /root/
 
 RUN chmod +x /root/tools/build_wordpress.sh && ./tools/build_wordpress.sh
-CMD php-fpm7.3 -F
+CMD sh ./tools/run_cmd.sh
