--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,5 @@
 version: "2.4"
+
 services:
   nginx:
     build: ./srcs/requirements/nginx/.
@@ -8,8 +9,11 @@ services:
     container_name: nginx
     networks:
       - Inception
+    depends_on:
+        - wordpress
     volumes:
-      - /home/ssamadi/data/WordPress:/var/www/html
+      - WordPress_db:/var/www/html
+    restart: "always"
   wordpress:
       build: ./srcs/requirements/wordpress/.
       image: wordpress
@@ -21,7 +25,8 @@ services:
       depends_on:
         - mariadb
       volumes:
-        - /home/ssamadi/data/WordPress:/var/www/html
+        - WordPress_db:/var/www/html
+      restart: "always"
   mariadb:
       build: ./srcs/requirements/mariadb/.
       image: mariadb
@@ -30,9 +35,22 @@ services:
         - 3306:3306
       networks:
         - Inception
-      # volumes:
-      #   - /home/ssamadi/data/DB:/var/lib/mysql/
+      volumes:
+        - DB:/var/lib/mysql/db_w
+      restart: "always"
 networks:
   Inception:
         name: Inception
-
+volumes:
+    WordPress_db:
+     driver: local
+     driver_opts:
+          type: none
+          device: /home/ssamadi/data/WordPress
+          o: bind
+    DB:
+       driver: local
+       driver_opts:
+          type: none
+          device: /home/ssamadi/data/DB
+          o: bind
