--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -2,7 +2,7 @@ version: "2.4"
 
 services:
   nginx:
-    build: ./srcs/requirements/nginx/.
+    build: requirements/nginx/.
     image: nginx
     ports:
       - 443:443
@@ -15,7 +15,9 @@ services:
       - WordPress_db:/var/www/html
     restart: "always"
   wordpress:
-      build: ./srcs/requirements/wordpress/.
+      env_file:
+        - .env
+      build: requirements/wordpress/.
       image: wordpress
       container_name: wordpress
       ports:
@@ -28,7 +30,9 @@ services:
         - WordPress_db:/var/www/html
       restart: "always"
   mariadb:
-      build: ./srcs/requirements/mariadb/.
+      env_file:
+        - .env
+      build: requirements/mariadb/.
       image: mariadb
       container_name: mariadb
       ports:
@@ -43,13 +47,11 @@ networks:
         name: Inception
 volumes:
     WordPress_db:
-     driver: local
      driver_opts:
           type: none
           device: /home/ssamadi/data/WordPress
           o: bind
     DB:
-       driver: local
        driver_opts:
           type: none
           device: /home/ssamadi/data/DB
