--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -8,5 +8,5 @@ COPY . /root/
 RUN chmod +x tools/build_mariadb.sh && ./tools/build_mariadb.sh
 
 
-CMD ["sh", "run_front.sh"]
+CMD ["sh", "tools/run_front.sh"]
 
